# sales-email-automation

./: .env.example  .gitignore  API_UPDATES.md  CHANGELOG.md  CHANGES_SUMMARY.md  Dockerfile.agent  Dockerfile.backend  Dockerfile.email-poller  QUICK_FIX_REFERENCE.md  README.md  docker-compose.yml  export_classifications_to_excel.py  langgraph.json  pyproject.toml
.github/workflows/: codeql.yml
output/: email_classifications.xlsx  ~$email_classifications.xlsx
src/agent/: RAG_graph.py  company_verification_layer.py  config.py  email_classification_graph.py  email_ingestion_graph.py  email_poller.py  excel_tracker.py  get_access_token.py  graph_schemas.py  ingest.py  logger.py  report_generator.py
src/agent/prompts/: email_classification_system_prompt.txt  email_classification_user_prompt.txt
src/agent/unused/: auth.py  auth_routes.py  file_hash_manager.py  ingestion_graph.py  minio_config.py  server.py
